# rust_api

./: .gitignore  Cargo.toml  README.md
migrations/2021-07-11-134228_create_users/: up.sql
src/: db.rs  errors.rs  lib.rs  main.rs  schema.rs  tests.rs  utils.rs
src/controllers/: auth.rs  mod.rs  user.rs  users.rs
src/middlewares/: auth.rs
src/models/: dbmethods.rs  mod.rs  user.rs
src/routes/: auth.rs  mod.rs  not_found.rs  user.rs  users.rs
src/tests/: integration.rs
